ChangeLog for herdstat

2005-03-16 Aaron Walker <ka0ttic@gentoo.org>

	* src/herdstat.cc: Ignore --quiet if invoked with no other arguments.
	* bashcomp: Added 2>/dev/null to any herdstat invocations so that no
	errors (failed to fetch fex) show up in the completions.

2005-03-15 Aaron Walker <ka0ttic@gentoo.org>

	* src/exceptions.hh: va_start doesn't necessarily need a const char *.
	Thanks to azarah for helping me with this.  This fix gets rid of the
	only remaining gcc-4 warnings.

	* configure.ac: Update version (release-0.5).
	* NEWS: Update for 0.5 (and forgot to update for 0.4).
	* src/formatter.hh: Added peek() member function for peeking at the
	last element of formatter_T's internal buffer.
	* src/action_pkg_handler.cc: Fixed borked --package output (extra
	newlines should only be included in --verbose output where package
	<longdesciption>'s are displayed.
	* src/action_stats_handler.cc, src/action_stats_handler.hh: Added new
	action handler which shows a nice summary of statistics.  This handler
	is called if no arguments are specified on the command-line.
	* src/options.hh: Added action_stats to options_action_T enum.
	* src/herdstat.cc: Added action_stats_handler_T to the handler list.
	Also fixed bug where backup copy of fetched herds.xml wasn't removed.
	* src/Makefile.am: Added action_stats_handler.{cc,hh} to source list.

2005-03-14 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Update version (release-0.4).
	* src/util.cc, src/util.hh: Added collapse_whitespace() which
	collapses any consecutive whitepsace, strips leading/trailing
	whitespace, and converts any '\n''s in the middle into spaces.
	* src/herds_xml_handler.cc, src/metadata_xml_handler.cc: Run data
	through util::collapse_whitespace() while parsing and store the
	result.
	* src/options.cc, src/options.hh: Added generic container for holding
	options (option_type_T). options_T now holds an internal static map of
	strings (option names) and their corresponding data in whatever type